Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-32958

Qt Creator right display margin incorrect - only works with certain zoom levels

XMLWordPrintable

    • Linux/X11
    • 5f124330b (master)

      Description:
      When the zoom level is set to 106% (on a 1440p 16:9 screen) in Qt Creator, the right display margin in the text editor is misaligned by 2 characters. Although the right margin is configured to be at column 80 in Edit -> Preferences -> Text Editor -> Display, and "Tint whole margin area" is enabled, the tinted margin begins at character 78 instead of 80. This issue occurs with most zoom levels between 84% and 127%, but not at exactly 84% or 127%, where the margin is correctly displayed.

      Steps to Reproduce:

      1. Open Qt Creator 16.0.0 or 17.0.0-beta1.
      1. Go to Edit -> Preferences -> Text Editor -> Display.
      1. Set the right margin to column 80 and enable "Tint whole margin area".
      1. Set the zoom level to 106% (or try other values between 84% and 127%).
      1. Observe the position of the tinted right margin in the text editor.

      Expected Result:
      The tinted margin should begin at character 80, as configured.

      Actual Result:
      The tinted margin begins at character 78 when zoom is 106%, and behaves inconsistently for zoom levels between 84% and 127%.

      Workaround:
      Set the zoom level to exactly 84% or 127%, where the margin is correctly displayed.

       

      I have attached screenshot for this issue.

        1. zoom_106.png
          341 kB
          Chakib Boutaghane
        2. zoom_117.png
          336 kB
          Chakib Boutaghane
        3. zoom_124.png
          353 kB
          Chakib Boutaghane
        For Gerrit Dashboard: QTCREATORBUG-32958
        # Subject Branch Project Status CR V

            davschul David Schulz
            chakib Chakib Boutaghane
            Votes:
            3 Vote for this issue
            Watchers:
            9 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes