TextEditor: Improve wording for margin display

Since the line is painted between two columns, the "at column" is a bit
confusing.

Task-number: QTCREATORBUG-32958
Change-Id: I840fb38f4be22ce2a797ed6fd5a38e25f10a920e
Reviewed-by: Leena Miettinen <riitta-leena.miettinen@qt.io>